Fix layout on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,7 @@ body {
 	color: var(--text-color);
 	font-family: sans-serif;
 
-	margin: 0;
+	margin: 0 1rem 0 1rem;
 }
 
 p {
